--- a/annex-B.adoc
+++ b/annex-B.adoc
@@ -1,6 +1,6 @@
 [appendix]
 :appendix-caption: Annex
-== Title
+== Relevant OGC Engineering Reports
 
 [NOTE]
 Place other Annex material in sequential annexes beginning with "A" and leave final two annexes for the Revision History and Bibliography
