--- a/clause_1.adoc
+++ b/clause_1.adoc
@@ -3,11 +3,13 @@
 
 
 Increasing computational power allows us to anticipate great advances based on convergence and interoperability existing capabilities in the areas of:
+
 * Modeling and Simulation, e.g., training simulators
 * Integrated environmental models, e.g., predictive geophysical computer models.
 * Geo-Social modeling at several scales
 
 OGC can bring a unique perspective and coordination to the convergent worlds of Modeling, Simulation, Prediction (MSP).  In particular OGC activity can:
+
 * Identify the value of interoperability of geospatial MSP to making decisions
 * Define concepts and semantic models that aid analysts in using MSP
     * Static and dynamic, empirical and analytic, etc.
@@ -15,6 +17,7 @@ OGC can bring a unique perspective and coordination to the convergent worlds of 
 * Quality assessment: Effectiveness, Provenance, and Reproducibility
 
 Cross cutting concepts
+
 * CRS
 * Time
 * Geographic domains - layers, etc
@@ -25,22 +28,25 @@ Cross cutting concepts
 
 The OGC Technology Forecasting has identified Mod, Sim, Predict as priority trend for assessment.
 
-This note builds on previous activities in the OGC Future Directions sessions .
+This note builds on previous activities in the OGC Future Directions sessions.
+
 1. Modeling and Simulation to interact with a representation of the real world – “prediction” depends on user interaction
+
 2. Simulation and Prediction to analyze some phenomenology - “modeling” establishes the domain of analysis.
+
 3. Geospatial predictive modeling - a process for spatially analyzing events in order to make statements of likelihood for event occurrence
 
 //  If you want to reference a figure by using a figure number, it is important to use the following syntax. The figure identifier for <<img_mindMap>> is the first statement of the header. Please adapt the width as appropriate.
 
 [#img_mindMap,reftext='{figure-caption} {counter:figure-num}']
 .The overlapping technologies of Modeling, Simulation and Prediction
-image::images/ModSimPredictOvals.png[width=800,align="center"]
+image::figures/ModSimPredictOvals.png[width=800,align="center"]
 
 
 This Tech note is organized using the outline of Technology Roadmapping Techniques
-** Markets
-** Applications
-** Technology
-With a particular emphasis on the steps needed to meeting the particular perspective that OGC can bring to advancing this trend.
 
-Figure: Tech Roadmap  Mod-Sim-Predict
+* Markets (Section 2)
+* Applications (Section 3)
+* Technology (Section 4)
+
+With a particular emphasis on the steps needed to meeting the particular perspective that OGC can bring to advancing this trend (SEction 5) .
