--- a/clause_0_front_material.adoc
+++ b/clause_0_front_material.adoc
@@ -12,7 +12,8 @@ ogcdoc, OGC document,  <tags separated by commas>
 
 [NOTE]
 ====
-Insert Preface Text here. Give OGC specific commentary: describe the technical content, reason for document, history of the document and precursors, and plans for future work. >
+OGC develops Technology Notes in order to advance priority trends identified in by OGC Technology Forecasting.
+
 Attention is drawn to the possibility that some of the elements of this document may be the subject of patent rights. The Open Geospatial Consortium shall not be held responsible for identifying any or all such patent rights.
 
 Recipients of this document are requested to submit, with their comments, notification of any relevant patent claims or other intellectual property rights of which they may be aware that might be infringed by any implementation of the standard set forth in this document, and to provide supporting documentation.
